--- a/client/src/css/_dashboard.scss
+++ b/client/src/css/_dashboard.scss
@@ -419,80 +419,6 @@ code {
   Bootstrap-custom
 ===================*/
 
-.col,
-.col-1,
-.col-10,
-.col-11,
-.col-12,
-.col-2,
-.col-3,
-.col-4,
-.col-5,
-.col-6,
-.col-7,
-.col-8,
-.col-9,
-.col-auto,
-.col-lg,
-.col-lg-1,
-.col-lg-10,
-.col-lg-11,
-.col-lg-12,
-.col-lg-2,
-.col-lg-3,
-.col-lg-4,
-.col-lg-5,
-.col-lg-6,
-.col-lg-7,
-.col-lg-8,
-.col-lg-9,
-.col-lg-auto,
-.col-md,
-.col-md-1,
-.col-md-10,
-.col-md-11,
-.col-md-12,
-.col-md-2,
-.col-md-3,
-.col-md-4,
-.col-md-5,
-.col-md-6,
-.col-md-7,
-.col-md-8,
-.col-md-9,
-.col-md-auto,
-.col-sm,
-.col-sm-1,
-.col-sm-10,
-.col-sm-11,
-.col-sm-12,
-.col-sm-2,
-.col-sm-3,
-.col-sm-4,
-.col-sm-5,
-.col-sm-6,
-.col-sm-7,
-.col-sm-8,
-.col-sm-9,
-.col-sm-auto,
-.col-xl,
-.col-xl-1,
-.col-xl-10,
-.col-xl-11,
-.col-xl-12,
-.col-xl-2,
-.col-xl-3,
-.col-xl-4,
-.col-xl-5,
-.col-xl-6,
-.col-xl-7,
-.col-xl-8,
-.col-xl-9,
-.col-xl-auto {
-    padding-right: 10px;
-    padding-left: 10px;
-}
-
 .breadcrumb {
     background-color: transparent;
     margin-bottom: 15px;
@@ -1073,6 +999,7 @@ code {
     padding-bottom: 30px;
     position: fixed;
     top: 60px;
+    transition: .5s ease-in-out;
 }
 
 .side-menu .waves-effect .waves-ripple {
@@ -1082,10 +1009,45 @@ code {
 .side-menu .slimScrollBar {
     background: #ffffff !important;
 }
-
-.enlarged .side-menu {
-    position: absolute;
+.slide-menu{ 
+    transition:  all .5s ease-in-out;
 }
+
+.slide-menu.side-menu{ 
+    width: 70px;
+    transition: .5s ease-in;
+}
+
+.slide-menu.side-menu{ 
+    width: 70px;
+    transition: .5s ease-in;
+    ul>li.menu-title{
+        padding: 0 !important;
+       
+    }
+    ul>li>a>span{
+        visibility: hidden !important;
+        transition: .5s ease-in;
+        display: none;
+    }
+    ul>li>a{
+        display: block;
+        overflow: hidden;
+        transition: .5s ease-in;
+
+    }
+    ul>li>a:hover{
+        width: 240px;
+        background-color: #5045e3;
+        transition: .5s ease-in;
+        >span{
+            visibility: visible !important;
+            transition: .5s ease-in;
+            display: inline-block;
+        }
+    }
+}
+
 
 .content-page {
     margin-left: 240px;
@@ -1111,7 +1073,7 @@ code {
 #sidebar-menu>ul>li>a {
     color: rgba(255, 255, 255, 0.7);
     display: block;
-    padding: 13px 20px;
+    padding: 13px 27px;
     font-size: 14.5px;
     position: relative;
     -webkit-transition: all 0.5s;
@@ -1132,6 +1094,7 @@ code {
 #sidebar-menu>ul>li>a>span {
     vertical-align: middle;
     margin-left: 5px;
+    transition: all 0.5s ease-in;
 }
 
 .submenu li a {
@@ -1176,7 +1139,6 @@ code {
 }
 
 .menu-title {
-    padding: 12px 20px !important;
     letter-spacing: 1px;
     font-size: 10px;
     font-weight: 600;
@@ -2215,9 +2177,6 @@ code {
   Progressbar
 ===================*/
 
-.progress-bar {
-    background-color: #655be6;
-}
 
 .progress {
     height: 10px;
