update modal creaqte

--- a/client/src/css/_common.scss
+++ b/client/src/css/_common.scss
@@ -1515,7 +1515,10 @@ ul {
         color: #171337;
     }
 }
-
+select.form-control{
+    padding: 0 15px;
+    height: 60px;
+}
 
 /*--
     - Background Color
