--- a/client/src/css/_header.scss
+++ b/client/src/css/_header.scss
@@ -13,7 +13,7 @@
 }
 
 .header-area {
-    background-color: $slateblue;
+    background-color: #655be6;
     -webkit-transition: all 0.4s ease-in;
     transition: all 0.4s ease-in;
     -webkit-animation-duration: 5s;
