--- a/client/src/css/_contact.scss
+++ b/client/src/css/_contact.scss
@@ -6,9 +6,8 @@
                 overflow: hidden;
                 padding-bottom: 100px;
                 background: #00416A;
-                background: -webkit-linear-gradient(to bottom, #FFE000, #799F0C, #00416A);  
-                background: linear-gradient(to bottom, #FFE000, #799F0C, #00416A); 
-                
+                background: -webkit-linear-gradient(to bottom, #FFE000, #799F0C, #00416A);
+                background: linear-gradient(to bottom, #FFE000, #799F0C, #00416A);
             }
             
             .contact-box {
@@ -16,54 +15,54 @@
                 padding: 80px 80px 80px 80px;
                 background: #00416A;
                 background: -webkit-linear-gradient(to bottom, #FFE000, #799F0C, #4f7e2e);
-                background: linear-gradient(to bottom, #FFE000, #799F0C, #4f7e2e); 
-                    @media #{$xss-layout} {
-                     padding: 30px;
+                background: linear-gradient(to bottom, #FFE000, #799F0C, #4f7e2e);
+                @media #{$xss-layout} {
+                    padding: 30px;
                 }
                 .btn {
-                background: #f6db00 !important;
-                border: 1px solid #f1d901 !important;
-                padding: 13px 25px !important;
-                color: #1f2235;
-                    &:hover{
+                    background: #f6db00 !important;
+                    border: 1px solid #f1d901 !important;
+                    padding: 13px 25px !important;
+                    color: #1f2235;
+                    &:hover {
                         background: transparent !important;
                         border: 1px solid #fff !important;
                         color: #fff;
                     }
                 }
-                   
-            .react-datepicker-wrapper{
-             width:100%;
-            }
-            .form-control{
-                background: transparent;
-                &:focus{
+                .react-datepicker-wrapper {
+                    width: 100%;
+                }
+                .form-control {
                     background: transparent;
+                    &:focus {
+                        background: transparent;
+                        border: 1px solid #f1d901 !important;
+                    }
+                }
+                textarea.form-control {
+                    background: transparent;
+                    color: #171337;
+                    &:focus {
+                        background: transparent;
+                    }
+                }
+                .invalid-feedback {
+                    color: #f6db00 !important;
                 }
             }
-            textarea.form-control{
-                background: transparent;
-                color: #171337;
-                &:focus{
-                    background: transparent;
-                }
-            }
-
-            }
-
+            
             .conatact-info-box {
-
-                       @media #{$xs-layout} {
-                     margin-bottom: 40px;
+                @media #{$xs-layout} {
+                    margin-bottom: 40px;
                 }
-
                 .conatact-icon {
                     width: 22px;
                     height: 32px;
                     overflow: hidden;
                     line-height: 32px;
                     font-size: 20px;
-                    color: rgba(255,255,255,0.85);
+                    color: rgba(255, 255, 255, 0.85);
                     text-align: center;
                     float: left;
                     margin: 2px 20px 60px 0px;
@@ -76,7 +75,7 @@
                 }
                 .conatact-title {
                     font-size: 24px;
-                    font-weight:$regular;
+                    font-weight: $regular;
                     color: #f9dd01;
                     margin: 0px 0px 15px 0px;
                     padding: 0px 0px 0px 0px;
@@ -84,27 +83,25 @@
                     font-family: $rubik;
                     text-transform: uppercase;
                 }
-                .conatact-content{
-                    p{
-                       font-size: 16px;
-                       font-family: $rubik;
-                       color: #ffffff;
-                       margin: 0px 0px 0px 0px;
-                       padding: 0px 0px 0px 0px;
+                .conatact-content {
+                    p {
+                        font-size: 16px;
+                        font-family: $rubik;
+                        color: #ffffff;
+                        margin: 0px 0px 0px 0px;
+                        padding: 0px 0px 0px 0px;
                     }
-                       a{
-                           color: #ffffff;
-                           display: block;
-                           font-size: 16px;
-                           font-family: $rubik;
-                           color: #ffffff;
-                           margin: 0px 0px 0px 0px;
-                           padding: 0px 0px 0px 0px;
-                         &:hover{
-                           color: #f9dd01;
-                         }
-                       }
-                   }
+                    a {
+                        color: #ffffff;
+                        display: block;
+                        font-size: 16px;
+                        font-family: $rubik;
+                        color: #ffffff;
+                        margin: 0px 0px 0px 0px;
+                        padding: 0px 0px 0px 0px;
+                        &:hover {
+                            color: #f9dd01;
+                        }
+                    }
+                }
             }
-         
-      
