portfolio updated is process

--- a/client/src/css/_dashboard.scss
+++ b/client/src/css/_dashboard.scss
@@ -780,7 +780,9 @@ code {
     height: 88px;
     width: 88px;
 }
-
+.thumb-fix-h-500{
+    height: 500px;
+}
 .grid-structure .grid-container {
     background-color: #f5f5f5;
     margin-bottom: 10px;
